# algorithm

./: README.md
cplusplus_basic/: bili.bat  cplusplus_foundation.md
cplusplus_basic/demo_const/: .ninja_log  CMakeLists.txt  build.ninja  demo_ninja_const.cpp  demo_ninja_main.cpp  demo_ninja_player.cpp  windows.toolchain.cmake
cplusplus_basic/demo_const/ffmpeg/include/libavutil/: ffversion.h
cplusplus_basic/demo_const/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  swscale.lib
cplusplus_foundation/demo_const/: .ninja_log  clean.bat  demo_ninja_const.hpp  demo_ninja_player.cpp  demo_ninja_player.hpp  windows.toolchain.cmake
cplusplus_foundation/demo_const/ffmpeg/lib/: avformat.lib  avutil.lib  postproc.lib  swresample.lib
